rtm: extract imaging accumulation into dedicated module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(rtm3d
     src/rtm/Geometry.cpp
     src/rtm/Boundary.cpp
     src/rtm/Propagation.cpp
+    src/rtm/Imaging.cpp
     src/cli/CliOptions.cpp
 )
 
